wrote some shit auto-commit
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1170,6 +1170,13 @@ Figure \ref{fig:nfz_representation_example} shows an instance of a NoFlyZone pre
   \label{fig:nfz_representation_example}
 \end{figure}
 
+\begin{figure}[!hbpt]
+  \center
+  \includegraphics[width=\linewidth]{img/london_snapshot_small_nfzs.png}
+  \caption{Updated version of Figure \ref{fig:london_snapshot_small} with highlighted No Fly Zones.}
+  \label{fig:london_snapshot_small_nfzs}
+\end{figure}
+
 \subsubsection{Controller Placement}
 
 \subsubsection{Snapshot Generator}
