wrote some shit auto-commit
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1232,14 +1232,17 @@ Not only do we have to consider the merits of each location, but how pairs of lo
 
 After fixing one location, the flaws of others became more apparent. King's was rejected on the grounds that it was placed in an awkward position such that it would end up being responsible for far more of the map than South Bank would. LSE was in a prime position in the centre-left of the map, but with the location came the consideration that nearby hotels and fine dining establishments would not appreciate a major drone operation occuring above their property.\\
 
-Lastly, UCL and SOAS were rejected for being too close to a major hospital zone. This left City University to host our second Controller, giving us a nice bit of symmetry to the world layout.
+Lastly, UCL and SOAS were rejected for being too close to a major hospital zone. This left City University to become the host of our second Controller, giving us a nice bit of symmetry to the world layout.
 
 \subsubsection{Order Generator}
 Although its location does not have any bearing on the simulation outcome, the SpatialOS load balancer prefers to have this entity in the same place as any random Controller, so we stuck to our above-river bias and planted it under City University.
 
 \subsubsection{Drones}
+No drones exist in the world at startup because it is the job of a Controller to manage the life cycle of a drone. Therefore they do not need to be considered here.
 
 \subsection{Snapshot Generator}
+
+
 \subsubsection{Voronoi Split}
 
 
@@ -1302,6 +1305,10 @@ Before considering how to maximise profitability, we introduce the concept of th
 
 %**********************************************%
 \newpage
+\section{TODO: Conclusion}
+
+%**********************************************%
+\newpage
 \section{TODO: Future Work}
 % more scheduling types
 % switching scheduler on-the-fly
@@ -1319,11 +1326,6 @@ Before considering how to maximise profitability, we introduce the concept of th
 % more package types
 % UnityClient for interactive simulation
 % improved data extraction tool
-
-%**********************************************%
-\newpage
-\section{TODO: Conclusion}
-
 
 
 %**********************************************%
