wrote some shit auto-commit
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1245,6 +1245,20 @@ No drones exist in the world at startup because it is the job of a Controller to
 
 \subsubsection{Voronoi Split}
 
+\begin{figure}[!hbpt]
+  \center
+  \includegraphics[width=\linewidth]{img/smol.png}
+  \caption{Voronoi diagram of the London snapshot.}
+  \label{fig:smol}
+\end{figure}
+
+\begin{figure}[!hbpt]
+  \center
+  \includegraphics[width=\linewidth]{img/gdoc2.png}
+  \caption{SpatialOS view of a running simulation. Note that \textit{OrderGenerator} has been incorrectly labelled as \textit{Scheduler} in the image.}
+  \label{fig:gdoc2}
+\end{figure}
+
 
 %**********************************************%
 \newpage
