--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1335,11 +1335,16 @@ In addition to the priority system, we introduce a mechanism whereby the cost to
 
 By charging both bigger fees for higher priority requests we provide incentives for controllers to prioritise more important requests to generate more revenue. However by offering reductions for slower delivery of goods, we also ensure that controllers attempt to serve all delivery requests as soon as possible.
 
-% As higher priority requests will generate more revenue than lower priority requests, we must provide this information
-
 \subsection{Operating Costs}
+To calculate the profitability of the drone delivery network, we need to consider the costs of operating such a system. For our simulation we have identified the main sources of expenditure to be the energy consumption overhead of running the drones, along with any penalties that may be charged for failed deliveries and mid-flight collisions.\\
+
+Although we have designed each Controller to act as a delivery dispatch point, like an Amazon Fulfilment Centre, we do not consider the costs of running such a warehouse. Instead we only focus on economic matters that are influenced by our newly introduced drone delivery dynamics.
+
 \subsubsection{Energy Consumption}
+
+
 \subsubsection{Penalties}
+
 
 %**********************************************%
 \newpage
